style: auto play slideshow, fix the jumpiness at the start

--- a/source/stylesheets/less/_slider.less
+++ b/source/stylesheets/less/_slider.less
@@ -113,16 +113,19 @@
 
 		.slide{
 			height: @hero-height;
-		    -webkit-transition: all 0.2s linear;
-		    -moz-transition: all 0.2s linear;
-		    -ms-transition: all 0.2s linear;
-		    -o-transition: all 0.2s linear;
-		    transition: all 0.2s linear;
-		    -webkit-animation: scale_slide 0.3s ease-out 1;
-		    -moz-animation: scale_slide 0.3s ease-out 1;
-		    -ms-animation: scale_slide 0.3s ease-out 1;
-		    -o-animation: scale_slide 0.3s ease-out 1;
-		    animation: scale_slide 0.3s ease-out 1;
+
+			&.animate-slide {
+			    -webkit-transition: all 0.2s linear;
+			    -moz-transition: all 0.2s linear;
+			    -ms-transition: all 0.2s linear;
+			    -o-transition: all 0.2s linear;
+			    transition: all 0.2s linear;
+			    -webkit-animation: scale_slide 0.3s ease-out 1;
+			    -moz-animation: scale_slide 0.3s ease-out 1;
+			    -ms-animation: scale_slide 0.3s ease-out 1;
+			    -o-animation: scale_slide 0.3s ease-out 1;
+			    animation: scale_slide 0.3s ease-out 1;
+			}
 
     		&.hashicorp{
     			background-image: url(/images/home-hero/hashicorp.jpg);
@@ -252,7 +255,7 @@
 			height: 80px;
 			z-index: 2000;
 			background-color: rgba(0, 0, 0, .2);
-			background-image: url(/images/slider-arrows.png);
+			background-image: url(/images/arrow-right.png);
 			background-repeat: no-repeat;
 			text-indent: -9999px;
 			white-space: nowrap;
